[package]
name = "libwinit"
version = "0.1.0"
edition = "2021"

[lib]
name = "Winit30"
crate-type = ["cdylib"]

[dependencies]
winit = { git = "https://github.com/syrel/winit.git", rev = "c6e3fb435465bc02c343d24356a5b5ef7b0a93ff" }
log = "0.4"
anyhow = "1.0"
env_logger = "0.11"
parking_lot = "0.12"
value-box = {  version = "2.3", features = ["anyhow"] }
string-box = "1.1"
geometry-box = "1.0"
value-box-ffi = { version = "1.2", features = [ "geometry-box", "string-box" ] }
raw-window-handle-extensions = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[build-dependencies]
cfg_aliases = "0.2"